--- a/src/assets/components/table/table-rows/TableRows.module.scss
+++ b/src/assets/components/table/table-rows/TableRows.module.scss
@@ -2,4 +2,17 @@
     display: flex;
     flex-direction: column;
     justify-content: space-between;
+    padding: 5px 0 20px 10px;
+
+    & > div {
+        padding: 2px 0;
+
+        // &:nth-child(even) {
+        //     background-color: rgb(124, 127, 130);
+        // }
+
+        // &:nth-child(odd) {
+        //     background-color: rgb(43, 43, 43);
+        // }
+    }
 }
