--- a/src/assets/components/room/cat-age/CatAge.module.scss
+++ b/src/assets/components/room/cat-age/CatAge.module.scss
@@ -1,3 +1,16 @@
 .inputAge {
     max-width: 50px;
+    border-color: transparent;
+    background-color: transparent;
+    border-radius: 2px;
+
+    transition: all 0.4s ease;
+
+    &:hover {
+        border-color: -internal-light-dark(
+            rgb(118, 118, 118),
+            rgb(133, 133, 133)
+        );
+        background-color: rgb(59, 59, 59);
+    }
 }
