--- a/src/assets/components/room/cat-age/CatAge.module.scss
+++ b/src/assets/components/room/cat-age/CatAge.module.scss
@@ -3,6 +3,7 @@
     border-color: transparent;
     background-color: transparent;
     border-radius: 2px;
+    padding: 4px;
 
     transition: all 0.4s ease;
 
