--- a/src/page/home/Home.module.scss
+++ b/src/page/home/Home.module.scss
@@ -1,6 +1,7 @@
 .layout {
     display: grid;
     grid-template-columns: 1fr 4fr;
+    grid-template-rows: 1fr;
     height: 100%;
 
     transition: all 0.4s ease;
