--- a/src/assets/components/table/table-rows/TableRows.module.scss
+++ b/src/assets/components/table/table-rows/TableRows.module.scss
@@ -1,6 +1,6 @@
 .wrapper {
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
     // justify-content: space-between;
     align-items: start;
     padding: 5px 0 20px 10px;
