style name comp

--- a/src/assets/components/table/new-row/NewRow.module.scss
+++ b/src/assets/components/table/new-row/NewRow.module.scss
@@ -2,6 +2,8 @@
     display: block;
 
     & p {
-        display: inline;
+        display: inline-block;
+        min-width: 26px;
+        margin: 0;
     }
 }
