--- a/src/components/cat/cat-name/CatName.module.scss
+++ b/src/components/cat/cat-name/CatName.module.scss
@@ -1,5 +1,5 @@
 .inputName {
-    max-width: 50px;
+    // max-width: 50px;
     border-color: transparent;
     background-color: transparent;
     border-radius: 2px;
