--- a/src/assets/sass/_global.scss
+++ b/src/assets/sass/_global.scss
@@ -1,17 +1,33 @@
 :root {
+    --bg-color-dark: rgb(36, 36, 36);
+    --fg-color-dark: rgb(245, 245, 245);
+
+    --bg-color-light: rgb(245, 245, 245);
+    --fg-color-light: rgb(36, 36, 36);
+
     font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
     line-height: 1.5;
     font-weight: 400;
 
     color-scheme: light dark;
-    color: rgb(245, 245, 245);
-    background-color: rgb(36, 36, 36);
+    // color: rgb(245, 245, 245);
+    // background-color: var(--bg-color-dark);
 
     font-synthesis: none;
     text-rendering: optimizeLegibility;
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
 }
+
+[data-theme="dark"] {
+    background-color: var(--bg-color-dark);
+    color: var(--fg-color-dark);
+}
+[data-theme="light"] {
+    background-color: var(--bg-color-light);
+    color: var(--fg-color-light);
+}
+
 #root {
     width: 100%;
 }
