--- a/src/components/room/new-room/NewRoom.module.scss
+++ b/src/components/room/new-room/NewRoom.module.scss
@@ -5,6 +5,7 @@
 
     display: flex;
     flex-direction: row;
+    align-items: center;
 
     background-color: rgb(43, 43, 43);
     border-radius: 8px;
@@ -29,5 +30,12 @@
 
     & > p {
         margin: 0;
+    }
+}
+
+[data-theme="light"] {
+    .header {
+        background: linear-gradient(rgb(118, 118, 118), rgb(133, 133, 133));
+        color: var(--fg-color-light);
     }
 }
