--- a/src/assets/sass/_global.scss
+++ b/src/assets/sass/_global.scss
@@ -22,10 +22,12 @@
 [data-theme="dark"] {
     background-color: var(--bg-color-dark);
     color: var(--fg-color-dark);
+    transition: background-color 0.4s ease-in-out;
 }
 [data-theme="light"] {
     background-color: var(--bg-color-light);
     color: var(--fg-color-light);
+    transition: background-color 0.4s ease-in-out;
 }
 
 #root {
