--- a/src/components/toggle-theme/ToggleTheme.module.scss
+++ b/src/components/toggle-theme/ToggleTheme.module.scss
@@ -5,17 +5,17 @@
 }
 .input {
     position: absolute;
-    top: 0px;
-    right: 100px;
-    width: 25px;
-    height: 25px;
+    top: -3px;
+    right: 96px;
+    width: 30px;
+    height: 30px;
     z-index: 10;
     opacity: 0;
+    cursor: pointer;
 
     & + label {
         display: flex;
         align-items: center;
-        cursor: pointer;
         color: red;
 
         &:before {
@@ -36,7 +36,7 @@
             position: absolute;
             left: 13px;
 
-            transition: all 0.4s ease-out;
+            transition: all 0.4s ease-in-out;
         }
     }
 }
