--- a/src/assets/sass/_global.scss
+++ b/src/assets/sass/_global.scss
@@ -18,11 +18,24 @@
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
 }
+* {
+    box-sizing: border-box;
+}
 
 [data-theme="dark"] {
     background-color: var(--bg-color-dark);
     color: var(--fg-color-dark);
     transition: background-color 0.4s ease-in-out;
+
+    & input,
+    select {
+        background-color: transparent;
+        color: #ffffff;
+
+        &::placeholder {
+            color: #ffffff;
+        }
+    }
 }
 [data-theme="light"] {
     background-color: var(--bg-color-light);
@@ -32,6 +45,7 @@
     & input,
     select {
         color: var(--fg-color-light);
+        background-color: transparent;
 
         &:focus {
             background-color: rgb(227, 227, 227) !important;
