--- a/src/components/row/row-list/RowList.module.scss
+++ b/src/components/row/row-list/RowList.module.scss
@@ -1,22 +1,25 @@
 .wrapper {
     display: flex;
     flex-direction: column;
-    // justify-content: space-between;
     align-items: start;
     padding: 5px 0 20px 10px;
 
     position: relative;
 
     & > div {
-        padding: 2px 0;
+        width: 100%;
 
-        // &:nth-child(even) {
-        //     background-color: rgb(124, 127, 130);
-        // }
+        &:first-child {
+            border-top-right-radius: 8px;
+            border-top-left-radius: 8px;
+            overflow: hidden;
+        }
 
-        // &:nth-child(odd) {
-        //     background-color: rgb(43, 43, 43);
-        // }
+        &:last-child {
+            border-bottom-right-radius: 8px;
+            border-bottom-left-radius: 8px;
+            overflow: hidden;
+        }
     }
 
     & input[type="text"],
