--- a/src/components/row/new-row/NewRow.module.scss
+++ b/src/components/row/new-row/NewRow.module.scss
@@ -17,6 +17,7 @@
     position: absolute;
     top: 2px;
     left: -40px;
+    z-index: 9;
 
     transition: all 0.4s ease;
 
@@ -26,6 +27,7 @@
     }
 
     &.iconOpacity {
-        opacity: 1;
+        overflow: visible !important;
+        opacity: 1 !important;
     }
 }
