--- a/src/components/row/row-list/RowList.module.scss
+++ b/src/components/row/row-list/RowList.module.scss
@@ -18,7 +18,7 @@
         &:last-child {
             border-bottom-right-radius: 8px;
             border-bottom-left-radius: 8px;
-            overflow: hidden;
+            // overflow: hidden;
         }
     }
 
