--- a/src/assets/sass/_global.scss
+++ b/src/assets/sass/_global.scss
@@ -18,9 +18,6 @@
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
 }
-* {
-    box-sizing: border-box;
-}
 
 [data-theme="dark"] {
     background-color: var(--bg-color-dark);
@@ -75,45 +72,22 @@
     width: 100%;
 }
 
-a {
-    font-weight: 500;
-    color: #646cff;
-    text-decoration: inherit;
-}
-a:hover {
-    color: #535bf2;
-}
-
 body {
-    margin: 0;
     display: flex;
-    // place-items: center;
-    min-width: 320px;
     min-height: 100vh;
-}
-
-h1 {
-    font-size: 3.2em;
-    line-height: 1.1;
 }
 
 button {
     border-radius: 8px;
-    border: 1px solid transparent;
     padding: 0.6em 1.2em;
     font-size: 1em;
     font-weight: 500;
     font-family: inherit;
     background-color: #1a1a1a;
-    cursor: pointer;
-    transition: border-color 0.25s;
 }
-button:hover {
-    border-color: #646cff;
-}
-button:focus,
-button:focus-visible {
-    outline: 4px auto -webkit-focus-ring-color;
+
+input[type="checkbox"] {
+    margin: 0;
 }
 
 @media (prefers-color-scheme: light) {
