--- a/src/components/room/new-room/NewRoom.module.scss
+++ b/src/components/room/new-room/NewRoom.module.scss
@@ -1,6 +1,6 @@
 .header {
     width: 100%;
-    padding: 5px 15px;
+    padding: 10px 15px;
     margin: 15px 0;
 
     display: flex;
@@ -10,28 +10,42 @@
     background-color: rgb(43, 43, 43);
     border-radius: 8px;
 
-    & > button {
-        background-color: transparent;
-        margin-left: auto;
+    // & > button {
+    //     background-color: transparent;
+    //     margin-left: auto;
 
-        &:hover {
-            border-color: transparent;
-        }
-        &:focus,
-        :focus-visible {
-            outline: none;
-        }
-    }
+    //     &:hover {
+    //         border-color: transparent;
+    //     }
+
+    //     &:focus,
+    //     :focus-visible {
+    //         outline: none;
+    //     }
+    // }
 }
 
-.wrapper {
+.buttonAddRow {
     display: flex;
-    flex-direction: row;
+    background-color: green;
+    margin-left: auto;
+    opacity: 0.8;
 
-    & > p {
-        margin: 0;
+    transition: all 0.4s ease-in-out;
+
+    &:hover {
+        opacity: 1;
     }
 }
+
+// .wrapper {
+//     display: flex;
+//     flex-direction: row;
+
+//     & > p {
+//         margin: 0;
+//     }
+// }
 
 [data-theme="light"] {
     .header {
