--- a/src/assets/sass/_global.scss
+++ b/src/assets/sass/_global.scss
@@ -9,31 +9,27 @@
     line-height: 1.5;
     font-weight: 400;
 
-    color-scheme: light dark;
-    // color: rgb(245, 245, 245);
-    // background-color: var(--bg-color-dark);
-
     font-synthesis: none;
     text-rendering: optimizeLegibility;
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
 }
 
-[data-theme="dark"] {
-    background-color: var(--bg-color-dark);
-    color: var(--fg-color-dark);
-    transition: background-color 0.4s ease-in-out;
+// [data-theme="dark"] {
+//     background-color: var(--bg-color-dark);
+//     color: var(--fg-color-dark);
+//     transition: background-color 0.4s ease-in-out;
 
-    & input,
-    select {
-        background-color: transparent;
-        color: #ffffff;
+//     & input,
+//     select {
+//         background-color: transparent;
+//         color: #ffffff;
 
-        &::placeholder {
-            color: #ffffff;
-        }
-    }
-}
+//         &::placeholder {
+//             color: #ffffff;
+//         }
+//     }
+// }
 
 [data-theme="light"] {
     background-color: var(--bg-color-light);
@@ -88,19 +84,6 @@ button {
 
 input[type="checkbox"] {
     margin: 0;
-}
-
-@media (prefers-color-scheme: light) {
-    :root {
-        color: #213547;
-        background-color: #ffffff;
-    }
-    a:hover {
-        color: #747bff;
-    }
-    button {
-        background-color: #f9f9f9;
-    }
 }
 
 //--token-e648baba-11c9-42df-a543-26efb8706df2: rgb(245, 245, 245);
