--- a/src/components/room/new-room/NewRoom.module.scss
+++ b/src/components/room/new-room/NewRoom.module.scss
@@ -27,8 +27,10 @@
 
 .buttonAddRow {
     display: flex;
-    background-color: green;
     margin-left: auto;
+
+    color: #fff;
+    background-color: green;
     opacity: 0.8;
 
     transition: all 0.4s ease-in-out;
