--- a/src/components/cat/cat-breed/CatBreed.module.scss
+++ b/src/components/cat/cat-breed/CatBreed.module.scss
@@ -3,6 +3,7 @@
     border-color: transparent;
     border-radius: 2px;
     padding: 4px;
+    color: var(--on-surface-color);
 
     transition: all 0.4s ease;
 
@@ -12,5 +13,16 @@
             rgb(118, 118, 118),
             rgb(133, 133, 133)
         );
+    }
+
+    &:focus,
+    :focus-visible {
+        background-color: #fff;
+        color: #121212;
+    }
+
+    &::placeholder {
+        color: var(--on-surface-color);
+        opacity: 0.9;
     }
 }
