--- a/src/components/central-area/CentralArea.module.scss
+++ b/src/components/central-area/CentralArea.module.scss
@@ -1,4 +1,5 @@
 .container {
-    background-color: var(--bg-color-dark);
+    // background-color: var(--bg-color-dark);
+    background-color: var(--bg-color);
     color: white;
 }
