--- a/src/components/room/name-room/NameRoom.module.scss
+++ b/src/components/room/name-room/NameRoom.module.scss
@@ -1,10 +1,10 @@
 .inputName {
     max-width: 150px;
-    height: 16px;
     border-color: transparent;
     background-color: transparent;
     border-radius: 2px;
     padding: 4px;
+    color: var(--on-surface-color);
 
     transition: all 0.4s ease;
 
@@ -14,6 +14,17 @@
             rgb(133, 133, 133)
         );
         background-color: rgb(59, 59, 59);
+    }
+
+    &:focus,
+    :focus-visible {
+        background-color: #fff;
+        color: #121212;
+    }
+
+    &::placeholder {
+        color: var(--on-surface-color);
+        opacity: 0.9;
     }
 }
 
