--- a/src/components/room/new-room/NewRoom.module.scss
+++ b/src/components/room/new-room/NewRoom.module.scss
@@ -6,48 +6,36 @@
     display: flex;
     flex-direction: row;
     align-items: center;
+    gap: 15px;
 
-    background-color: rgb(43, 43, 43);
+    background-color: var(--surface-color);
+    color: var(--on-surface-color);
     border-radius: 8px;
-
-    // & > button {
-    //     background-color: transparent;
-    //     margin-left: auto;
-
-    //     &:hover {
-    //         border-color: transparent;
-    //     }
-
-    //     &:focus,
-    //     :focus-visible {
-    //         outline: none;
-    //     }
-    // }
 }
 
 .buttonAddRow {
     display: flex;
     margin-left: auto;
 
-    color: #fff;
-    background-color: green;
-    opacity: 0.8;
+    color: var(--on-primary-color);
+    background-color: var(--primary-color);
 
     transition: all 0.4s ease-in-out;
 
     &:hover {
-        opacity: 1;
+        scale: 1.1;
     }
 }
 
-// .wrapper {
-//     display: flex;
-//     flex-direction: row;
+.buttonDelRoom {
+    border: 1px solid transparent;
+    transition: all 0.4s ease-in-out;
 
-//     & > p {
-//         margin: 0;
-//     }
-// }
+    &:hover {
+        border-color: red;
+        color: red;
+    }
+}
 
 [data-theme="light"] {
     .header {
