--- a/src/components/row/new-row/NewRow.module.scss
+++ b/src/components/row/new-row/NewRow.module.scss
@@ -18,8 +18,9 @@
     padding: 0 15px;
     opacity: 0;
     position: absolute;
-    top: 2px;
+    top: 50%;
     left: -40px;
+    transform: translate(0, -50%);
     z-index: 9;
 
     transition: all 0.4s ease;
