--- a/src/components/row/new-row/NewRow.module.scss
+++ b/src/components/row/new-row/NewRow.module.scss
@@ -14,7 +14,7 @@
 }
 
 .iconRemoveRow {
-    color: white;
+    color: var(--on-surface-color);
     padding: 0 15px;
     opacity: 0;
     position: absolute;
