--- a/src/components/row/row-list/RowList.module.scss
+++ b/src/components/row/row-list/RowList.module.scss
@@ -31,7 +31,7 @@
         transition: all 0.4s ease;
 
         &:hover {
-            background-color: rgb(59, 59, 59);
+            background-color: var(--surface-color);
             border-color: -internal-light-dark(
                 rgb(118, 118, 118),
                 rgb(133, 133, 133)
@@ -41,24 +41,5 @@
 
     & input[type="date"] {
         min-width: max-content;
-    }
-}
-
-.iconRemoveRow {
-    color: white;
-    opacity: 1;
-    position: absolute;
-    top: 10px;
-    left: -20px;
-
-    transition: all 0.4s ease;
-
-    &:hover {
-        color: grey;
-        cursor: pointer;
-    }
-
-    &.iconOpacity {
-        opacity: 1;
     }
 }
