--- a/src/components/sidebar/Sidebar.module.scss
+++ b/src/components/sidebar/Sidebar.module.scss
@@ -5,6 +5,8 @@
     color: var(--on-surface-color);
 
     filter: drop-shadow(2px 0 4px #0e0e0e);
+
+    transition: all 0.4s ease-in-out;
 }
 
 .wrapper {
