--- a/src/page/home/Home.module.scss
+++ b/src/page/home/Home.module.scss
@@ -1,12 +1,5 @@
 .layout {
-    display: grid;
-    grid-template-columns: 1fr 4fr;
-    grid-template-rows: 1fr;
+    display: flex;
     height: 100%;
-
     transition: all 0.4s ease;
-}
-
-.sidebarOpen {
-    grid-template-columns: 1fr 10fr;
 }
